# Application/Contracts/Coliving/ColivingCreateDto.cs
@@ -5,7 +5,10 @@ public class ColivingCreateDto
     public Guid? Id { get; set; }
     public string Name { get; set; }
     public string Address { get; set; }
+    
+    public string Description { get; set; }
+    
     public string Email { get; set; }
-    public string PhoneNumber { get; set; }
-    public string RepresenterName { get; set; }
+    
+    public Guid? UserId { get; set; }
 }
