# Application/Contracts/Coliving/ColivingResponseDto.cs
@@ -7,9 +7,11 @@ public class ColivingResponseDto
     public Guid Id { get; set; }
     public string Name { get; set; }
     public string Address { get; set; }
+    
+    public string Description { get; set; }
     public string Email { get; set; }
-    public string PhoneNumber { get; set; }
-    public string RepresenterName { get; set; }
+    
+    public Guid UserId { get; set; }
     
     public ICollection<RoomResponseDto> Rooms { get; set; }
 }
